run some tests to debug the openssl library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-project(opensll_parser C CXX)
+project(OpenSSL_parser C CXX)
 
 add_executable(${PROJECT_NAME} main.cpp)
