add features for future task an testing environment to compare fingerprints

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(OpenSSL_parser C CXX)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
+add_subdirectory(fingerprint)
+list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/fingerprint/includes")
+list(APPEND EXTRA_LIBRARY_DIRECTORIES "${PROJECT_SOURCE_DIR}/fingerprint")
+list(APPEND EXTRA_LINKED_SOURCES Fingerprint)
+
 add_subdirectory(certificate)
 list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/certificate/includes")
 list(APPEND EXTRA_LIBRARY_DIRECTORIES "${PROJECT_SOURCE_DIR}/certificate")
@@ -15,7 +20,7 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC ${EXTRA_INCLUDE_DIRECTORIES}
 )
 target_link_directories(${PROJECT_NAME}
-    PUBLIC ${EXTRA_LINK_DIRECTORIES}
+    PUBLIC ${EXTRA_LIBRARY_DIRECTORIES}
 )
 
 target_link_libraries(${PROJECT_NAME}
