create a package library - to send them via shared memory. Tests successfull

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(producer)
 add_subdirectory(consumer)
 add_subdirectory(fingerprint)
 add_subdirectory(certificate)
+add_subdirectory(package)
