--- a/consumer/CMakeLists.txt
+++ b/consumer/CMakeLists.txt
@@ -7,6 +7,10 @@ list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/../fingerprint/incl
 list(APPEND EXTRA_LIBRARY_DIRECTORIES "${PROJECT_SOURCE_DIR}/../fingerprint")
 list(APPEND EXTRA_LINKED_SOURCES Fingerprint)
 
+list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/../package/includes")
+list(APPEND EXTRA_LIBRARY_DIRECTORIES "${PROJECT_SOURCE_DIR}/../package")
+list(APPEND EXTRA_LINKED_SOURCES Package)
+
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_BINARY_DIR}
