function template for splitting fingerprint into packages

--- a/fingerprint/CMakeLists.txt
+++ b/fingerprint/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_library(Fingerprint "src/fingerprint.cpp")
 
-list(APPEND EXTRA_LINKED_SOURCES Certificate)
-list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/certificate/includes")
 list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/fingerprint/includes")
 
+list(APPEND EXTRA_LINKED_SOURCES Certificate)
+list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/certificate/includes")
 
+list(APPEND EXTRA_LINKED_SOURCES Package)
+list(APPEND EXTRA_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/package/includes")
 
 target_include_directories(Fingerprint
                            PUBLIC ${PROJECT_BINARY_DIR}
