finish basic work on fingerprint emitter and the logic of produser subsequently. TODO: Reciever and consumer logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(consumer)
 add_subdirectory(fingerprint)
 add_subdirectory(certificate)
 add_subdirectory(package)
+add_subdirectory(fingerprint_emitter)
