integrating g-tests successfull

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.14..3.20)
 project(Shared_Memory C CXX)
+
+#TDD STUFF
+option(WITH_MY_TESTS "Do we want to configure tests" ON)
+if (WITH_MY_TESTS)
+    add_subdirectory(tests)
+endif()
 
 add_subdirectory(producer)
 add_subdirectory(consumer)
